# serializer version: 1
# name: test_build_error_view_snapshot
  dict({
    'blocks': list([
      dict({
        'text': dict({
          'text': ':x: *Couldn’t load agent setup.* Please try again. (ref: 01ARZ3NDEKTSV4RRFFQ69G5FAV)',
          'type': 'mrkdwn',
        }),
        'type': 'section',
      }),
    ]),
    'callback_id': 'agent_setup',
    'title': dict({
      'text': 'Agent Setup',
      'type': 'plain_text',
    }),
    'type': 'modal',
  })
# ---
# name: test_to_blocks_snapshot[minimal_thinking]
  list([
    dict({
      'text': dict({
        'text': '*Thinking*',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Cancel',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[saturated_trail_with_preview_and_cost]
  list([
    dict({
      'text': dict({
        'text': '*Working* · 20s',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'text': dict({
        'text': '''
          ```
          +3 earlier
          ✔️ Read a file
          🚫 Wrote a file
          ✔️ Search issues (tracker)
          ✔️ Listed files
          🔍 Searching files
          🖋️ Running a command
          ```
        ''',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'expand': True,
      'text': dict({
        'text': '> Preview text describing the ongoing work.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Cancel',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[single_tool]
  list([
    dict({
      'text': dict({
        'text': '*Working* · 10s',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'text': dict({
        'text': '''
          ```
          🖋️ Running a command
          ```
        ''',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Cancel',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_done_no_cost]
  list([
    dict({
      'elements': list([
        dict({
          'text': '42s · 1.5k in / 320 out',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_done_with_cost]
  list([
    dict({
      'elements': list([
        dict({
          'text': '42s · 1.5k in / 320 out · $0.04',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[terminal_error_with_reason]
  list([
    dict({
      'elements': list([
        dict({
          'text': '❌ rate limited · 12s · 100 in / 50 out',
          'type': 'mrkdwn',
        }),
      ]),
      'type': 'context',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[thinking_with_elapsed]
  list([
    dict({
      'text': dict({
        'text': '*Thinking* · 10s',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Cancel',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
# name: test_to_blocks_snapshot[thinking_with_preview]
  list([
    dict({
      'text': dict({
        'text': '*Thinking* · 10s',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'expand': True,
      'text': dict({
        'text': '> Let me check that for you.',
        'type': 'mrkdwn',
      }),
      'type': 'section',
    }),
    dict({
      'elements': list([
        dict({
          'action_id': 'cancel_turn',
          'style': 'danger',
          'text': dict({
            'text': 'Cancel',
            'type': 'plain_text',
          }),
          'type': 'button',
        }),
      ]),
      'type': 'actions',
    }),
  ])
# ---
